--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <title>Pensamento computacional</title>
 <ul class="menu">
 <li><a href="home.html"> Home</a></li>
+<li><a href="imagem1.webp"> 
+<li><a href="contato.html"> contato/a</a>H1>   
 </ul>
 </header>
 <H1>Minha Primeira Página HTML</H1>
