--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </ul>
 </header>
 <H1>Minha Primeira Página HTML</H1>
-<img scr="imagem1.webp">
+<img id ="Pensamento-Computacional" scr="Pensamento-Computacional">
 <p>Na disciplina de Pensamento Computacional
 estamos aprendendo Código HTML. Que serve
 para a criação e edição de páginas da web.
