--- a/perguntas.html
+++ b/perguntas.html
@@ -15,4 +15,10 @@
 <li><a href="imagem1.webp"> 
 <li><a href="contato.html"> contato/a</a>H1>   
 </ul>
-</header>
+</header>]
+
+
+
+
+</body>
+</html>
